<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.issever.issevercore.ui.fragments.home.viewModel.HomeViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.fragments.home.HomeFragment">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_c_midnight_18sp_semi_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/icore_demo_app" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_charcoal_14sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/icore_demo_app_desc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="20dp"
                    android:background="@color/c_grey_alt" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_midnight_16sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/remote_data" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_charcoal_14sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/remote_data_desc" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:onClick="@{() -> viewModel.navigateToCatFacts()}"
                    android:text="@string/remote_data_samples"
                    android:textAppearance="@style/text_white_14sp_medium"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="20dp"
                    android:background="@color/c_grey_alt" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_midnight_16sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:text="@string/language_and_theme" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_charcoal_14sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/language_and_theme_desc" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.chooseLanguage()}"
                        android:text="@string/choose_language"
                        android:textAppearance="@style/text_white_14sp_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.chooseTheme()}"
                        android:text="@string/choose_theme"
                        android:textAppearance="@style/text_white_14sp_medium" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="20dp"
                    android:background="@color/c_grey_alt" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_c_midnight_16sp_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:gravity="center"
                    android:text="@string/snack_bar_types" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.getSuccess()}"
                        android:text="@string/s_success"
                        android:textAppearance="@style/text_white_14sp_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.getError()}"
                        android:text="@string/s_error"
                        android:textAppearance="@style/text_white_14sp_medium" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.getWarning()}"
                        android:text="@string/s_warning"
                        android:textAppearance="@style/text_white_14sp_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.getInfo()}"
                        android:text="@string/s_info"
                        android:textAppearance="@style/text_white_14sp_medium" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:onClick="@{() -> viewModel.getDefault()}"
                        android:text="@string/s_default"
                        android:textAppearance="@style/text_white_14sp_medium" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>