<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.issever.issevercore.ui.viewModel.MainViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.fragments.catFacts.CatFactsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:onClick="@{() -> viewModel.navigateBack()}"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/text_c_midnight_18sp_semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/icore_demo_app" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_c_charcoal_14sp_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat_fact_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/c_grey_alt" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_c_midnight_16sp_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/cat_facts" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swpFacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_cat_fact" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabReturnTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:fabCustomSize="40dp"
                android:layout_margin="20dp"
                android:clickable="true"
                android:src="@drawable/ic_arrow_up"
                app:backgroundTint="@color/c_primary"
                app:borderWidth="0dp"
                app:tint="@color/c_white"
                android:contentDescription="Return to Top" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.getFavoriteCatFact()}"
            android:text="@string/show_favorite_fact"
            android:layout_marginVertical="10dp"
            android:layout_margin="2dp"
            android:textAppearance="@style/text_white_14sp_medium"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>